--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -13,4 +13,4 @@ jobs:
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
         with:
-          your-secret: ${{ toJSON(secrets.LISBER_PAT) }}
+          secrets-context: ${{ toJSON(secrets) }}
