--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -12,5 +12,8 @@ jobs:
       - name: Grade use-secrets activity
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
+        env:
+            xxx: ${{ secrets.LISBER_PAT }}
         with:
-          secrets-context: ${{ toJSON(secrets) }}
+          secrets-context: ${{ toJSON(secrets.LISBER_PAT) }}
+          #secrets-context: ${{ secrets.LISBER_PAT }}
