--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -7,13 +7,12 @@ on:
 jobs:
   check-secret:
     runs-on: ubuntu-latest
+    environment: Test
     steps:
       - uses: actions/checkout@v2
       - name: Grade use-secrets activity
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
-        env:
-            xxx: ${{ secrets.LISBER_PAT }}
         with:
-          secrets-context: ${{ toJSON(secrets.LISBER_PAT) }}
+          secrets-context: ${{ toJSON(secrets.LGO_PATH) }}
           #secrets-context: ${{ secrets.LISBER_PAT }}
